syntax = "proto3";

package api;

option go_package = "shared/proto/api";

message User {
    string id = 1;
    string username = 2;
}


service UserService {
    // rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse)  {}
}


// message CreateUserRequest {
//     string username = 1;
//     string password = 2;
//     string email = 3;
// }

// message CreateUserResponse {
//     string user_id = 1;
//     string message = 2; 
// }


message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string user_id = 1;
    string username = 2;
    // string email = 3;
}
